# Release

./: .gitignore  docker-compose.yml  package-lock.json  package.json
apps/backend/: .env.example  Dockerfile  pyproject.toml  railway.toml  server.err  server_fresh.err  uvicorn.err
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py  0002_event_detail_tables.py  d6f90d12c6ca_add_hot_column_indexes_and_remaining_.py
apps/backend/app/: main.py
apps/backend/app/ai_pipeline/: contracts.py  orchestrator.py  registry.py
apps/backend/app/api/: admin.py  ai_search.py  alerts.py  announcements.py  calendar.py  checklist.py  commodities.py  companies.py  dashboard.py  events.py  feedback.py  graph.py  historical_memory.py  indices.py  insights.py  intelligence_market.py  intelligence_pages.py  ipo.py  market.py  market_data.py  mie.py  multi_horizon.py  news.py  pattern.py  predictions.py  premarket.py  publishing.py  radar.py  related.py  ripple.py  scenario.py  scores.py  sectors.py  stocks.py  stories.py  stream.py  thesis.py
apps/backend/app/cache/: __init__.py  cache_service.py
apps/backend/app/core/: config.py  limiter.py  logging.py  redis.py  security.py
apps/backend/app/db/: backup.py  base.py  crud.py  health.py  models.py  models_legacy.py  schema_patches.py  seed.py  session.py
apps/backend/app/pipeline/: classifier.py  event_pipeline.py  opportunity_generator.py
apps/backend/app/providers/: __init__.py  base.py  bse_provider.py  economic_calendar_provider.py  nse_provider.py  pib_provider.py  rbi_provider.py  rss_provider.py  sebi_provider.py
apps/backend/app/repositories/: event_repository.py  government_policy_repository.py  (+1 more)
docs/: audit.html  (+3 more)
(+390 files in other folders)
