[project]
name = "ig-backend"
version = "0.2.0"
description = "FastAPI backend for IG Market Intelligence"
requires-python = ">=3.11"
dependencies = [
  # Web framework
  "fastapi>=0.103.0",
  "uvicorn[standard]>=0.23.0",
  "gunicorn>=22.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.0.0",

  # Database
  "sqlalchemy>=2.0.32",
  "asyncpg>=0.28.0",
  "aiosqlite>=0.20.0",
  "alembic>=1.13.0",

  # Cache
  "redis>=5.0.0",

  # HTTP client
  "httpx>=0.26.0",

  # Market data
  "yfinance>=0.2.40",
  "fyers-apiv3>=3.0.0",  # Fyers primary market data (optional: works without it)

  # Scheduling
  "apscheduler>=3.10.4",

  # Logging
  "structlog>=24.1.0",

  # RSS / HTML parsing
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.1.0",

  # Resilience
  "tenacity>=8.2.0",

  # Rate limiting
  "slowapi>=0.1.9",
  "limits>=3.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.26.0",
]

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"
